# python-project-template

./: LICENSE  README.md  SECURITY.md  doc_requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: deploy.yml  docs.yml  test.yml
docs/: bootstrap.md
src/your-package/: __init__.py
tests/: conftest.py  test_from_human.py  test_to_human.py  test_utils.py
