[metadata]
license_files = LICENSE.txt

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel
universal=0

[tool:pytest]
addopts = --cov=human_dates --strict-markers
